# SlavaScript_on_C

./: .gitignore  CMakeLists.txt  README.md  callstack.h  commit.bat  main.cpp  modules_updater.py  path.cpp  path.h  repl.cpp  repl.h  second.cbp  start.cpp  start.h
Compiler/: compiler.cpp  compiler.h  compilervisitor.cpp  compilervisitor.h
Cpp17/: Cpp17.cbp  compile.bat  filesystem.cpp  filesystem.h
Examples/: 11 chemistry.s++  12 call_function.s++  13 imported.s++  14 importer.s++  class.s++  example.s++  files.s++  integration.s++  map.s++  null.s++  recorsiya.s++  test.s++  try.s++
Exception/: argumentsmismatchexception.h  exception.cpp  exception.h  exceptions.cpp  exceptions.h  lexerexception.cpp  lexerexception.h  mathexception.h  operationIsnotsupportedexception.h  parseexception.h  typeexception.h  unknownclassexception.h  unknownfunctionexception.h  unknownmoduleexception.h  unknownpropertyexception.h  variabledoesnotexistsexception.h
Expression/: all.h  arrayexpression.cpp  arrayexpression.h  assignmentexpression.cpp  assignmentexpression.h  assignmentoperator.h  binaryexpression.cpp  binaryexpression.h  binaryoperator.h  conditionalexpression.cpp  conditionalexpression.h  conditionaloperator.h  containeracceselement.cpp  containeracceselement.h  containeraccessexpression.cpp  containeraccessexpression.h  containerassignmentexpression.cpp  containerassignmentexpression.h  expression.h  functionalexpression.cpp  functionalexpression.h  functionreferenceexpression.cpp  functionreferenceexpression.h  mapexpression.cpp  mapexpression.h  objectcreationexpression.cpp  objectcreationexpression.h  operators.cpp  suffixassignmentexpression.cpp  suffixassignmentexpression.h  suffixelement.cpp  suffixelement.h  suffixexpression.cpp  suffixexpression.h  ternaryexpression.cpp  ternaryexpression.h  unaryexpression.cpp  unaryexpression.h  unaryoperator.h  valueexpression.cpp  (+3 more)
Lib/: argument.cpp  argument.h  arguments.cpp  arguments.h  class.cpp  class.h  classdeclaration.cpp  classdeclaration.h  classdeclarations.cpp  classdeclarations.h  classes.cpp  classes.h  classmethod.cpp  classmethod.h  classmethod_impl.h  filesystem.cpp  filesystem.h  function.cpp  function.h  functionmodule.cpp  functionmodule.h  functions.cpp  functions.h  macros.h  moduleclass.h  moduleclass_impl.h  modulefunction.cpp  modulefunction.h  moduleobject.cpp  moduleobject.h  moduleobject_impl.h  names.cpp  names.h  userdefinedclass.cpp  userdefinedclass.h  userdefinedfunction.cpp  userdefinedfunction.h  utils.cpp  utils.h  utils_impl.h  (+2 more)
Modules/: all.h  chemistry.cpp  chemistry.h  draw.cpp  draw.h  files.cpp  files.h  functional.cpp  functional.h  global.cpp  global.h  math.cpp  math.h  module.h  modules.cpp  modules.h  std.cpp  std.h  types.cpp  types.h
Parser/: lexer.cpp  lexer.h  parseerror.cpp  parseerror.h  parseerrors.cpp  parseerrors.h  parser.cpp  parser.h  token.cpp  token.h  tokentype.h
Run/: callstack.cpp  callstack.h  path.cpp  path.h  repl.cpp  repl.h  start.cpp  start.h
Statement/: all.h  blockstatement.cpp  blockstatement.h  breakstatement.cpp  breakstatement.h  classdeclarationsstatement.cpp  classdeclarationsstatement.h  continuestatement.cpp  continuestatement.h  dowhilestatement.cpp  dowhilestatement.h  exprstatement.cpp  exprstatement.h  foreacharraystatement.cpp  foreacharraystatement.h  foreachmapstatement.cpp  foreachmapstatement.h  forstatement.cpp  forstatement.h  functiondefinestatement.cpp  functiondefinestatement.h  functionstatement.cpp  functionstatement.h  ifstatement.cpp  ifstatement.h  importstatement.cpp  importstatement.h  integrationstatement.cpp  integrationstatement.h  printlnstatement.cpp  printlnstatement.h  printstatement.cpp  printstatement.h  returnstatement.cpp  returnstatement.h  statement.h  switchstatement.cpp  switchstatement.h  throwstatement.cpp  throwstatement.h  (+4 more)
Value/: arrayvalue.cpp  arrayvalue.h  boolvalue.cpp  (+23 more)
(+42 files in other folders)
